--- a/lib/Sass/global/_mixins.scss
+++ b/lib/Sass/global/_mixins.scss
@@ -50,4 +50,19 @@
           transform-origin: $origin;
 }
 
+@mixin icon-font($content){
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    content: $content;
+}
 
