--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -7,6 +7,7 @@ $font-pop:'Montserrat', sans-serif;
 $font-base: 'Open Sans', sans-serif;
 $font : $font-base;
 
+
 $color-primary: #65AEF2;
 
 $animation-fast: 0.1s;
@@ -26,6 +27,7 @@ $font-size-mini: 0.8rem;
 $work-bench-width : 350px;
 $setting-panel: 300px;
 $feature-info-panel-width: 500px;
+$branding-height: 55px;
 
 $border-color: rgba(#fff, 0.2);
 
