--- a/lib/Sass/partial/_search.scss
+++ b/lib/Sass/partial/_search.scss
@@ -8,9 +8,12 @@
   max-height: 0;
   opacity: 0;
   @include transition(all 0.5s ease-in-out);
+  .workbench &{
+    max-height: calc(100vh - 110px);
+    overflow-y: auto;
+  }
   .is-searching &{
     opacity: 1;
-    max-height: 10000px;
   }
 }
 
