--- a/lib/Sass/partial/_dropdown.scss
+++ b/lib/Sass/partial/_dropdown.scss
@@ -11,6 +11,8 @@
     background: #fff;
     box-shadow: 0 0.1em 0.25em rgba(0, 0, 0, 0.15), 0 0.1em 0.2em rgba(0, 0, 0, 0.2);
     padding: $padding/2;
+    max-height: 190px;
+    overflow-y: auto;
     @include scale(0);
     @include transform-origin(100% 0);
     @include transition(all, 350ms, cubic-bezier(0.19, 1, 0.22, 1));
