--- a/lib/Sass/partial/_layout.scss
+++ b/lib/Sass/partial/_layout.scss
@@ -44,9 +44,9 @@
   }
 
   .cesium-widget, .cesium-widget canvas {
-      width: 100%;
-      height: 100%;
-      touch-action: none;
+    width: 100%;
+    height: 100%;
+    touch-action: none;
   }
 }
 
@@ -55,7 +55,10 @@
   z-index: 1;
   top: 0;
   left: 0;
+  width: 100vw;
+  height: 100vh;
 }
+
 
 #map-nav{
     position: fixed;
