--- a/lib/Sass/partial/_dropdown.scss
+++ b/lib/Sass/partial/_dropdown.scss
@@ -5,7 +5,7 @@
     overflow: hidden;
     position: absolute;
     left: 0;
-    top: $padding;
+    top: 0;
     width: 100%;
     box-sizing: border-box;
     background: #fff;
