--- a/lib/Sass/partial/_modal_window.scss
+++ b/lib/Sass/partial/_modal_window.scss
@@ -1,3 +1,5 @@
+$section-height: 500px;
+
 .modal-content{
   position: relative;
   width: 1000px;
@@ -28,7 +30,7 @@
 .tab-panel{
   width: 100%;
   .panel-content{
-    height: 500px;
+    height: $section-height;
     max-height: 100%;
     position: relative;
   }
@@ -84,4 +86,13 @@
   }
 }
 
+
 //My data
+.added-data, .add-data{
+  height: $section-height/2 - $padding*3;
+}
+
+.add-data{
+  background: #f5f5f5;
+  padding: $padding;
+}
