--- a/lib/Sass/partial/_dropdown.scss
+++ b/lib/Sass/partial/_dropdown.scss
@@ -6,6 +6,7 @@
     position: absolute;
     left: 0;
     top: 0;
+    z-index: 9999;
     width: 100%;
     box-sizing: border-box;
     background: #fff;
