--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -20,6 +20,9 @@ $grey-lighter: #ddd;
 
 $faint-bg: #f5f5f5;
 
+$modal-bg: $dark;
+$modal-text: #fff;
+
 $font-size-base: 1rem;
 $font-size-small: 0.95rem;
 $font-size-mini: 0.8rem;
