--- a/lib/Sass/partial/_data_catalog.scss
+++ b/lib/Sass/partial/_data_catalog.scss
@@ -34,7 +34,7 @@
 .data-catalog ul{
   padding-left: $padding/2;
   .panel-content & {
-    background: $dark-lighter;
+    background: $modal-secondary-bg;
   }
 }
 
