--- a/lib/Sass/partial/_modal_window.scss
+++ b/lib/Sass/partial/_modal_window.scss
@@ -91,7 +91,7 @@ $section-height: 600px;
 
 
 .add-data{
-  background: $dark-lighter;
+  background: $modal-secondary-bg;
   padding: $padding*2;
   height: 280px;
 }
