--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -20,8 +20,9 @@ $grey-lighter: #ddd;
 
 $faint-bg: #f5f5f5;
 
-$modal-bg: $dark;
-$modal-text: #fff;
+$modal-bg: #fff;
+$modal-text: #000;
+$modal-secondary-bg: #f0f0f0;
 
 $font-size-base: 1rem;
 $font-size-small: 0.95rem;
