--- a/lib/Sass/partial/_modal_window.scss
+++ b/lib/Sass/partial/_modal_window.scss
@@ -86,10 +86,8 @@ $section-height: 600px;
   }
 }
 
-
+// TO DO: NEED TO SEPERATE MYDATA TAB STYLE INTO A DIFFERETN FILE
 //My data
-
-
 .add-data{
   background: $modal-secondary-bg;
   padding: $padding*2;
