--- a/lib/Views/FeatureInfoPanelSection.html
+++ b/lib/Views/FeatureInfoPanelSection.html
@@ -1,7 +1,3 @@
-<script type="text/html" id="feature-info-panel-section-template">
-    <div data-bind="markdown: info"></div>
-</script>
-
 <div class="feature-info-panel-section">
     <div class="feature-info-panel-section-header" data-bind="click: toggleOpen">
         <!-- ko if: feature == terria.selectedFeature -->
@@ -14,8 +10,6 @@
         <span class="feature-info-panel-section-label" data-bind="text: name"></span>
     </div>
     <div class="feature-info-panel-section-content-wrapper" data-bind ="css:feature == terria.selectedFeature ?'open': 'closed'">
-        <div class="feature-info-panel-section-content" data-bind="css: { 'feature-info-panel-section-content-white-background': useWhiteBackground }">
-            <div data-bind="template: {name: 'feature-info-panel-section-template', afterRender: renderCustomComponents.bind($data)}"></div>
-        </div>
+    <div class="feature-info-panel-section-content" data-bind="markdown: info, css: { 'feature-info-panel-section-content-white-background': useWhiteBackground }"></div>
     </div>
 </div>
