--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -13,9 +13,9 @@ $color-primary: #65AEF2;
 $animation-fast: 0.1s;
 
 
-$dark: #282D32;
+$dark: #3F4854;
 $dark-lighter: #595B60;
-
+$grey: #888888;
 $grey-lighter: #ddd;
 
 $faint-bg: #f5f5f5;
