--- a/lib/Sass/partial/_now_viewing.scss
+++ b/lib/Sass/partial/_now_viewing.scss
@@ -50,6 +50,8 @@ $now-viewing-margin: 5px;
   margin-top: $now-viewing-margin;
   max-height: calc(100vh - 145px);
   overflow-y: auto;
+  background: rgba(#fff, 0.15);
+  padding: 0  $padding-small $padding-small $padding-small;
 }
 
 .now-viewing__item-control{
@@ -99,3 +101,9 @@ $now-viewing-margin: 5px;
   padding: $padding;
 }
 
+.now-viewing__header{
+  .label, .btn{
+    text-transform: uppercase;
+    font-size: 0.9rem;
+  }
+}
