side panel styles

--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -33,6 +33,7 @@ $work-bench-width : 350px;
 $setting-panel: 300px;
 $feature-info-panel-width: 500px;
 $branding-height: 55px;
+$work-bench-header: 180px;
 
 $border-color: rgba(#fff, 0.2);
 
