--- a/lib/Sass/partial/_form.scss
+++ b/lib/Sass/partial/_form.scss
@@ -31,7 +31,7 @@
   input{
     padding-left: 3rem;
     height: 3rem;
-    margin: 2px;
+    width: 100%;
   }
   .panel-content &{
     font-family: $font;
