--- a/lib/Sass/partial/_settingPanel.scss
+++ b/lib/Sass/partial/_settingPanel.scss
@@ -29,11 +29,23 @@
   position: relative;
   z-index: 1;
   .setting-panel-inner{
+    &:before{
+      content: '';
+      display: block;
+      height: 20px;
+      width: 20px;
+      background: $dark;
+      position: absolute;
+      top: -10px;
+      @include transform(rotate(45deg));
+      left: $setting-panel/2 - 8px
+    }
     @include transform (scale(0) translateZ(0));
     @include transition(0.2s all cubic-bezier(0.4, 0, 0.2, 1));
     @include transform-origin(top center);
+    box-shadow: $box-shadow;
     position: absolute;
-    margin-top: -10px;
+    margin-top: 15px;
     z-index: -1;
     left: -($setting-panel/2 - 15px);
 
@@ -50,14 +62,9 @@
 }
 .setting-panel-inner{
     width: $setting-panel;
-    background: $dark-lighter;
+    background: $dark;
     color: #fff;
     border: $border-style;
-    .basemap{
-      height: 130px;
-      font-size: 10px;
-      line-height: 1;
-    }
 }
 .setting-panel__viewer-selector, .setting-panel__basemap-selector{
   margin: 0 -$padding-mini;
