clean up search

--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -33,7 +33,8 @@ $work-bench-width : 350px;
 $setting-panel: 300px;
 $feature-info-panel-width: 500px;
 $branding-height: 55px;
-$workbench-header: 180px;
+$workbench-header: 190px;
+$input-height: 3rem;
 
 $border-color: rgba(#fff, 0.15);
 
