--- a/lib/Sass/partial/_form.scss
+++ b/lib/Sass/partial/_form.scss
@@ -30,7 +30,7 @@
     }
   input{
     padding-left: 3rem;
-    height: 3rem;
+    height: $input-height;
     width: 100%;
   }
   .panel-content &{
