--- a/lib/Sass/partial/_now_viewing.scss
+++ b/lib/Sass/partial/_now_viewing.scss
@@ -54,6 +54,15 @@ $now-viewing-margin: 5px;
   padding: 0  $padding-small $padding-small $padding-small;
 }
 
+
+.now-viewing__item-header{
+  width: 100%;
+  @include transition(height 0.25s ease-in-out);
+  .now-viewing__item.is-open & {
+  border-bottom: 1px solid $border-color;
+  }
+}
+
 .now-viewing__item-control{
   padding: $padding 0;
   .btn{
@@ -65,14 +74,6 @@ $now-viewing-margin: 5px;
   .info{
     border-left: 1px solid $border-color;
     border-right: 1px solid $border-color;
-  }
-}
-
-.btn.now-viewing__item-title{
-  width: 100%;
-  @include transition(height 0.25s ease-in-out);
-  .now-viewing__item.is-open & {
-  border-bottom: 1px solid $border-color;
   }
 }
 
