--- a/lib/Sass/partial/_map_navigation.scss
+++ b/lib/Sass/partial/_map_navigation.scss
@@ -63,7 +63,7 @@ $compass-width: 70px;
   color: #fff;
   width: $ring-width*2;
   border-radius: 100px;
-  border: 1px solid #000;
+  border: 1px solid #fff;
   text-align: center;
   font-size: 15px;
   .btn{
